--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,3 +1,5 @@
+/* Luís Macedo | 3220554 | Portfolio | 3º 2024/2025 | 2º semestre | Laboratório de Projeto II | Design Gráfico e Multimédia | ESAD.CR | Professor Marco Heleno | 09-06-2025 */
+
 * {
     margin: 0;
     padding: 0;
